app/assets/stylesheets/components/_login_sign_forms.scss
.login-container {
  display: flex;
  justify-content: center;
  width: 100%;

  a {
    text-decoration: none;
  }

  .form-login {
    background: white;
    padding: 20px;
    margin-top: 50px;
    border-radius: 3px;
    box-shadow: 1px 1px 2px rgba(0,0,0,0.2);
    width: 370px;

    h2 {
      margin-bottom: 20px;
      text-align: center;
    }

    .form-actions-btn {
      display: flex;
      justify-content: space-around;

      .primary-button {
        font-family: $body-font;
        width: 100%;
        background-color: #6ECAD6;
        border: none;
        color: white;
        padding: 15px 32px;
        text-align: center;
        text-decoration: none;
        display: inline-block;
        font-size: 16px;
        cursor: pointer;
        // transition-duration: 0.4s;
      }
      .primary-button:hover {
        background-color: #74d5e0;
      }
    }
    .form-bottom-links {
        margin-top: 16px;
    }
  }
}

